<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MealActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_230sdp"
        android:backgroundTint="@color/g_black">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:contentScrim="@color/accent"
            app:layout_scrollFlags="scroll|snap|exitUntilCollapsed"
            app:title="Meal name">

            <ImageView
                android:id="@+id/img_meal_detail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax"
                tools:ignore="ImageContrastCheck"
                android:contentDescription="@string/random_meal_image" />

            <androidx.appcompat.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                app:layout_collapseMode="pin" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btn_add_to_favorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_10sdp"
        android:contentDescription="@string/for_add_the_meal_to_my_favorites"
        android:src="@drawable/ic_un_fav"
        app:backgroundTint="@color/white"
        app:tint="#FF0000"
        app:layout_anchor="@id/appbar"
        app:layout_anchorGravity="bottom|end" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/linear_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_marginEnd="@dimen/_5sdp"
                android:layout_marginTop="@dimen/_5sdp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <TextView
                    android:id="@+id/tv_category"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="Category:Beef"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    app:drawableLeftCompat="@drawable/ic_category"
                    app:drawableTint="@color/g_black"
                    android:layout_weight="1"
                    tools:ignore="HardcodedText" />

                <TextView
                    android:id="@+id/tv_area"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="Area : Palestine"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    app:drawableLeftCompat="@drawable/ic_area"
                    app:drawableTint="@color/g_black"
                    android:layout_weight="1"
                    tools:ignore="HardcodedText" />

            </LinearLayout>

            <TextView
                android:id="@+id/tv_instructions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/instructions"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linear_layout"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginStart="@dimen/_5sdp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:fontFamily="@font/myfont"
                android:textSize="@dimen/_15ssp" />

            <TextView
                android:id="@+id/tv_instructions_steps"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="@id/tv_instructions"
                app:layout_constraintTop_toBottomOf="@id/tv_instructions"
                android:layout_marginTop="@dimen/_2sdp"
                android:textColor="@color/black" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <ImageView
        android:id="@+id/img_youtube"
        android:layout_width="@dimen/_40sdp"
        android:layout_height="@dimen/_40sdp"
        android:layout_gravity="bottom|center"
        android:src="@drawable/ic_youtube"
        android:layout_marginBottom="@dimen/_10sdp"
        android:contentDescription="@string/open_a_link_to_youtube_video" />

    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:id="@+id/progress_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        app:layout_anchor="@id/appbar"
        app:layout_anchorGravity="bottom"
        android:visibility="gone"
        app:indicatorColor="@color/accent" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>