<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.HomeFragment" >

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/linear_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_30sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/tv_home"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:fontFamily="@font/myfont"
                    android:text="@string/home"
                    android:textColor="@color/accent"
                    android:textSize="@dimen/_25ssp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/img_search"
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_search"
                    android:contentDescription="go to search fragment"
                    tools:ignore="HardcodedText" />
            </LinearLayout>

            <TextView
                android:id="@+id/tv_would_like_to_eat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:fontFamily="@font/myfont"
                android:text="@string/what_would_you_like_to_eat"
                android:textColor="@color/black"
                android:textSize="@dimen/_17ssp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/linear_header"
                app:layout_constraintTop_toBottomOf="@+id/linear_header" />

            <androidx.cardview.widget.CardView
                android:id="@+id/random_meal_card"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_160sdp"

                android:layout_marginStart="@dimen/_25sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_25sdp"
                app:cardCornerRadius="@dimen/_10sdp"
                android:elevation="-5dp"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_would_like_to_eat">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal" >

                    <ImageView
                        android:id="@+id/img_random_meal"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:elevation="-5dp"
                        android:background="@color/accent"
                        android:contentDescription="@string/random_meals"
                        android:scaleType="centerCrop" />

                    <androidx.cardview.widget.CardView
                        android:layout_width="@dimen/_27sdp"
                        android:layout_height="@dimen/_27sdp"
                        android:layout_marginStart="-35dp"
                        android:layout_marginTop="160dp"

                        android:elevation="5dp"
                        app:cardCornerRadius="@dimen/_5sdp"
                        app:cardUseCompatPadding="true" >

                        <ProgressBar
                            android:id="@+id/crl_progress"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:elevation="5dp"
                            android:indeterminateTint="@color/accent"
                            android:visibility="visible" />

                        <ImageView
                            android:id="@+id/img_refresh"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:elevation="5dp"
                            android:src="@drawable/ic_refresh"
                            app:tint="@color/accent"
                            android:visibility="gone"
                            tools:ignore="ContentDescription" />
                    </androidx.cardview.widget.CardView>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/tv_over_popular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_18sdp"
                android:fontFamily="@font/myfont"
                android:text="@string/over_popular_items"
                android:textColor="@color/black"
                android:textSize="@dimen/_17ssp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/tv_would_like_to_eat"
                app:layout_constraintTop_toBottomOf="@id/random_meal_card" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rec_view_meals_popular"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_90sdp"
                android:layout_marginStart="@dimen/_25sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_over_popular"
                tools:listitem="@layout/popular_item" />

            <TextView
                android:id="@+id/tv_categories"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:fontFamily="@font/myfont"
                android:text="@string/categories"
                android:textColor="@color/black"
                android:textSize="@dimen/_17ssp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/rec_view_meals_popular"
                app:layout_constraintTop_toBottomOf="@id/rec_view_meals_popular" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_25sdp"
                android:layout_marginEnd="@dimen/_25sdp"
                app:cardCornerRadius="@dimen/_10sdp"
                app:cardUseCompatPadding="true"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_categories">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rec_view_categories"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scrollbars="none"
                    tools:listitem="@layout/category_item" />

            </androidx.cardview.widget.CardView>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>